fix: improve modal width on mobile using dvw

--- a/main/http_server/axe-os/src/app/components/swarm/swarm.component.scss
+++ b/main/http_server/axe-os/src/app/components/swarm/swarm.component.scss
@@ -56,14 +56,26 @@ a {
 
 .modal {
     position: fixed;
-    max-height: 70vh;
-    width: 50vw;
+    max-height: 80dvh;
+    width: 90dvw;
     z-index: 999;
-    top: 0;
-    left: 0;
-    margin: 12vh 25vw;
-    padding: 50px;
+    top: 10vh;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 2rem;
     overflow-y: auto;
+}
+
+@media (min-width: 768px) {
+  .modal {
+    width: 70dvw;
+  }
+}
+
+@media (min-width: 1024px) {
+  .modal {
+    width: 50dvw;
+  }
 }
 
 .close {
